kubernetes/ingress/5-httpproxy.yml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: loyalty
  namespace: loyalty
spec:
  virtualhost:
    fqdn: loyalty.hardtophotels.com
  includes:
  - name: loyalty-reg
  routes:
  - services:
    - name: loyalty-svc
      port: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: loyalty-reg
  namespace: loyalty
spec:
  routes:
  - services:
    - name: reg-svc
      port: 8080
    conditions:
      - prefix: /register
